<resources>
    <string name="app_name">스마트홈 IoT</string>
    <string name="setbtn1">● 거실</string>
    <string name="setbtn2">● 안방</string>
    <string name="setbtn3">● 화장실</string>
    <string name="setbtn4">방 관리(설정)</string>
    <string name="setbtn5">앱 시작</string>
    <string name="Off">OFF</string>
    <string name="On">On</string>
    <string name="Back">뒤로가기</string>
    <string name="Big">대변</string>
    <string name="Small">소변</string>
    <string name="one">삶을 더 풍요롭게</string>
</resources>